2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Remove the networking from the kernel.
	* src/Makefile.am: Adjust.
	* src/network/bsdnet/bsdnet.mk: Remove.
	* src/network/bsdnet/connection.cc: Remove.
	* src/network/bsdnet/connection.hh: Remove.
	* src/network/bsdnet/network.cc: Remove.
	* src/network/bsdnet/network.hh: Remove.

2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Use a real exception hierarchy.
	* src/object/urbi-exception.hh (UrbiException): Remove the static
	methods lookupFailed, redefinition, primitiveError,
	wrongArgumentType and wrongArgumentCount.
	(LookupError, RedefinitionError, PrimitiveError, WrongArgumentType)
	(WrongArgumentCount): New exception classes.
	Adjust various Doxygen comments.
	* src/object/urbi-exception.cc (location_get, location_set): Move...
	* src/object/urbi-exception.hxx: ... here.
	Implement various inline constructors.
	* src/object/fwd.hh: Add new forward declarations.
	* src/object/object.cc,
	* src/object/primitives.hh,
	* src/object/float-class.cc: Adjust.

2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Remove old object-related tests.
	* src/object/Makefile.am: Adjust.
	* src/object/object-test-lookup.cc: Remove.
	* src/object/object-test-parent.cc: Remove.
	* src/object/object-test-primitives.cc: Remove.
	* src/object/object-test-slot.cc: Remove.
	* src/object/object-test.cc: Remove.
	* src/object/object-test.hh: Remove.

2007-10-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Disable hard errors.
	* configure.ac (ENABLE_HARD_ERRORS): New.  Set to false.
	* tests-local.mk (XFAIL_TESTS): Adjust.

2007-10-02  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Don't add unecessary `Noop' in the AST.
	* src/ast/ast.yml (Nary::back_flavor_set): New method.
	* src/ast/flavor.cc (operator<<(flavor_type)): Print "???" for
	flavor_none.
	* src/parser/bison/ugrammar.y (stmts): Prevent Noop to be added in
	Nary.
	* src/runner/runner.cc:
	(operator()(If)): Don't let the condition leak from the `if'.