@@ -10,7 +10,7 @@ AC_CONFIG_AUX_DIR([build-aux])
 URBI_BUILD_AUX
 
 # Automake.
-AM_INIT_AUTOMAKE([1.10 foreign tar-ustar -Wall dist-zip nostdinc])
+AM_INIT_AUTOMAKE([1.10 foreign tar-ustar -Wall nostdinc])
 
 ## ------------ ##
 ## Parameters.  ##
