@@ -8,29 +8,30 @@ noinst_LTLIBRARIES = libobject.la
 libobject_la_SOURCES =				\
 atom.hh						\
 atom.hxx					\
+code-class.cc					\
+code-class.hh					\
+context-class.cc				\
+context-class.hh				\
+float-class.cc					\
+float-class.hh					\
+fwd.hh						\
+integer-class.cc				\
+integer-class.hh				\
+list-class.cc					\
+list-class.hh					\
+object-class.cc					\
+object-class.hh					\
+object.cc					\
 object.hh					\
 object.hxx					\
-object.cc					\
-primitives.hh					\
-primitives.cc					\
-code-class.hh					\
-code-class.cc					\
-context-class.hh				\
-context-class.cc				\
-float-class.hh					\
-float-class.cc					\
-integer-class.hh				\
-integer-class.cc				\
-list-class.hh					\
-list-class.cc					\
-object-class.hh					\
-object-class.cc					\
-primitive-class.hh				\
 primitive-class.cc				\
-state.hh					\
+primitive-class.hh				\
+primitives.cc					\
+primitives.hh					\
 state.cc					\
-string-class.hh					\
+state.hh					\
 string-class.cc					\
+string-class.hh					\
+urbi-exception.cc				\
 urbi-exception.hh				\
-urbi-exception.hxx				\
-urbi-exception.cc
+urbi-exception.hxx
